# reading-manager

./: Book.cpp  Book.h  BookRepo.cpp  BookRepo.h  CMakeLists.txt  Controller.cpp  Controller.h  CustomExceptions.h  PersistenceEngine.cpp  PersistenceEngine.h  README.md  UserInterface.cpp  UserInterface.h  books.json  database.json  main.cpp  readinglist.json
Qt UI/: AdminWindow.cpp  AdminWindow.h  MainWindow.cpp  MainWindow.h  UserWindow.cpp  UserWindow.h
